refactor: 增加内嵌UI支持